# png-squisher

./: COPYING  meson.build  org.gnome.Png-Squisher.json  readme.md
data/: meson.build  org.gnome.Png-Squisher.appdata.xml.in  org.gnome.Png-Squisher.desktop.in  org.gnome.Png-Squisher.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  png-squisher-window.c  png-squisher-window.h  png-squisher-window.ui  png-squisher-window.ui~  png-squisher.gresource.xml
